2002-01-11  Marko Kreen  <marko@l-t.ee>

	* src/bytecode.cpp (ByteCode): Improve verbose output in debug
	build to track down errant class files - patch 256.

2002-01-06  Eric Blake  <ebb9@email.byu.edu>

	* src/op.h (class Operators):
	* src/op.cpp (opdesc): Make protected, and allow null arguments.
	* src/bytecode.h (PutNop): Delete dead code.
	* src/bytecode.cpp (EmitAssignmentExpression): Fix bad bytecode,
	caused by typo in patch 231 - bug 2541.
	(PutOp): Improve debugging code. Delete giant
	switch statement since it was duplicating op.cpp.
	(ChangeStack):
	* src/jikes.cpp:
	* src/scanner.cpp:
	* src/option.cpp (Option):
	* src/option.h: Replace static #ifdef TRACE_STACK_CHANGE with new
	dynamic +S option and debug_trace_stack_change, to allow easier
	debugging of bug 2541 - patch 254.

2002-01-06  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (EmitBranchIfExpression, EmitBinaryExpression):
	More optimizations of boolean result operations.
	(EmitCheckForNull, EmitSuperInvocation): Remove redundant check
	for null in anonymous constructors.
	(ConcatenateString): Fix overzealous assertion (idea courtesy of
	Mo DeJong) - bug 2540.
	* src/table.h (Overload): Fix subtle logic error which caused
	assertion failure - bug 2536, patch 253.

2001-12-21  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (EmitBranchIfExpression): Another bug detected
	by test cases written for bug 2530.

2001-12-21  Mo DeJong  <supermo@bayarea.net>

	* src/bytecode.h (IsZero, IsOne): Include the byte, short, and
	char types in the checks made by these methods - bug 2530, patch
	252.

2001-12-19  Eric Blake  <ebb9@email.byu.edu>

	* src/java.g: Fix core dump caused by patch on Dec 8 - bug 2518.
	* src/javaact.cpp:
	* src/javadcl.h:
	* src/javadef.h:
	* src/javasym.h: Regenerate.

2001-12-19  Eric Blake  <ebb9@email.byu.edu>

	* src/jikes.cpp (main): Provide help message when no command-line
	arguments are given.

2001-12-18  Eric Blake  <ebb9@email.byu.edu>
